<resources>
    <string name="app_name">Labor Connect</string>
    <string name="minimum_password">\"Minimum password length is 6\"</string>
    <string name="auth_failed">\"Authentication failed\"</string>
    <string name="plumber">Plumber</string>
    <string name="carpenter">Carpenter</string>
    <string name="electrician">Electrician</string>
    <string name="gardener">Gardener</string>
    <string name="cleaning">Cleaning</string>
    <string name="pest_control">Pest Control</string>
    <string name="babysitting">Babysitting</string>
    <string name="welder">Welder</string>
    <string name="painter">Painter</string>


    <string-array name="prof_array">

        <item>Plumber</item>
        <item>Carpenter</item>
        <item>Electrician</item>
        <item>Gardener</item>
        <item>Cleaning</item>
        <item>Pest control</item>
        <item>Babysitting</item>
        <item>Welder</item>
        <item>Painter</item>

    </string-array>

    <string-array name="city_mah">
        <item>Pune</item>
        <item>Mumbai</item>
        <item>Satara</item>
        <item>Jalna</item>

    </string-array>

    <string-array name="select_state_first">
        <item>Select State First</item>
    </string-array>

    <string-array name="state_array">
        <item>Select State</item>
        <item>Maharashtra</item>
        <item>Karnataka</item>

    </string-array>

    <string-array name="city_kar">
        <item>Bidar</item>
        <item>Gulbarga</item>
        <item>Humnabad</item>
        <item>Mysore</item>

    </string-array>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hi">Hi!</string>
    <string name="please_choose_your_service">Please choose your service!</string>
    <string name="pending_requests">Pending Requests</string>
    <string name="completed">Completed</string>
    <string name="all_set_to_go">All set to go!</string>
    <string name="please_select_your_location">Please Select your location</string>
    <string name="enter_description_for_the_required_service">Enter description for the required service</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="service_requests">Service requests</string>
    <string name="delete_request">Delete Request</string>
    <string name="done">Done</string>
    <string name="logout">Logout</string>
</resources>